--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,6 @@ idea {
     }
 }
 
-
 task syncWithRepo(dependsOn: 'classes', type: JavaExec) {
     main = 'com.entagen.jenkins.Main'
     classpath = sourceSets.main.runtimeClasspath
@@ -36,15 +35,20 @@ task syncWithRepo(dependsOn: 'classes', type: JavaExec) {
     ['help', 'jenkinsUrl', 'jenkinsUser', 'jenkinsPassword', 'gitUrl', 'templateJobPrefix', 'templateBranchName', 'branchNameRegex', 'nestedView', 'printConfig', 'dryRun', 'noViews', 'noDelete'].each {
         if (System.getProperty(it)) systemProperty it, System.getProperty(it)
     }
+}
 
+task syncWithMergeRequests(dependsOn: 'classes', type: JavaExec) {
+    main = 'com.assembla.jenkins.Main'
+    classpath = sourceSets.main.runtimeClasspath
+    // pass through specified system properties to the call to main
+    ['help', 'jenkinsUrl', 'jenkinsUser', 'jenkinsPassword', 'templateJobPrefix', 'templateBranchName',
+            'assemblaUser', 'assemblaPassword', 'clientId', 'clientToken', 'spaceToolId',
+            'spaceId', 'spaceToolId',
+            'branchNameRegex', 'nestedView', 'printConfig', 'dryRun', 'noViews', 'noDelete'].each {
+        if (System.getProperty(it)) systemProperty it, System.getProperty(it)
+    }
 }
 
 task wrapper(type: Wrapper) {
     gradleVersion = '1.0'
 }
-
-
-
-
-
-
