Test java library to make it work with Assembla API

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ dependencies {
     compile 'commons-cli:commons-cli:1.2' // should be part of groovy, but not available when running for some reason
     testCompile 'junit:junit:4.10'
     compile 'org.codehaus.groovy.modules.http-builder:http-builder:0.5.2'
+    compile 'oauth.signpost:signpost-core:1.2.1.2'
+    compile 'oauth.signpost:signpost-commonshttp4:1.2.1.2'
 }
 
 task createSourceDirs(description : 'Create empty source directories for all defined sourceSets') << {
