--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ task syncWithMergeRequests(dependsOn: 'classes', type: JavaExec) {
     ['help', 'jenkinsUrl', 'jenkinsUser', 'jenkinsPassword', 'templateJobPrefix', 'templateBranchName',
             'assemblaUrl', 'apiKey', 'apiSecret',
             'spaceId', 'spaceToolId', 'skipUpstream',
-            'branchNameRegex', 'nestedView', 'printConfig', 'dryRun', 'noViews', 'noDelete'].each {
+            'branchNameRegex', 'nestedView', 'printConfig', 'dryRun', 'startOnCreate', 'noViews', 'noDelete'].each {
         if (System.getProperty(it)) systemProperty it, System.getProperty(it)
     }
 }
