Create runnable jar

--- a/build.gradle
+++ b/build.gradle
@@ -43,8 +43,10 @@ task wrapper(type: Wrapper) {
     gradleVersion = '1.0'
 }
 
+jar {
+    from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+}
 
-
-
+manifest.mainAttributes("Main-Class" : "com.entagen.jenkins.Main")
 
 
